push to build on remote

--- a/showyourwork.yml
+++ b/showyourwork.yml
@@ -1,2 +1,10 @@
 version: 0.3.0
 
+dependencies:
+  src/scripts/plot_powerlawspline.py:
+    - src/data/spline_20n_mass_m_iid_mag_iid_tilt_powerlaw_redshift_mass_data.h5
+
+datasets:
+  10.5072/zenodo.1097541:
+    contents:
+      spline_20n_mass_m_iid_mag_iid_tilt_powerlaw_redshift_mass_data.h5: src/data/spline_20n_mass_m_iid_mag_iid_tilt_powerlaw_redshift_mass_data.h5
